/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package machine_discovery;

// Carries information about a host that was discovered by the Forge system
message DiscoveryInfo {
  // Enumerates discovered network interfaces on the host
  repeated NetworkInterface network_interfaces = 1;

  // Replaced with option 16: cpu_info, an aggregation of cpus per model
  // Enumerates CPUs on the host
  repeated Cpu cpus = 2 [deprecated = true];

  // Enumerates discovered block devices on the host
  repeated BlockDevice block_devices = 3;

  // Deprecated. Prefer machine_arch.
  string machine_type = 4;

  // Enumerates NVMe devices on the host
  repeated NvmeDevice nvme_devices = 5;

  // Replaced with option 8: A single field with DmiData
  // // Enumerates dmi devices on the host
  // repeated DmiDevice dmi_devices = 6;
  reserved 6;

  // The machines TPM Endorsement Key certificate in base64 format
  // An absent values means the endorsement key could not be read
  optional string tpm_ek_certificate = 7;

  // Values that are provided by DMI (Desktop Management Interface)
  DmiData dmi_data = 8;

  // Enumerates discovered infiniband interfaces on the host
  repeated InfinibandInterface infiniband_interfaces = 9;

  // DPU specific data
  optional DpuData dpu_info = 10;

  // Enumerates GPU devices on the host
  repeated Gpu gpus = 11;

  // Enumerates Memory devices on the host
  repeated MemoryDevice memory_devices = 12;

  // output of dmidecode -t 43 (TPM description)
  optional TpmDescription tpm_description = 13;

  optional CpuArchitecture machine_arch = 14;

  AttestKeyInfo attest_key_info = 15;

  // CPU info on the host per model (even though only one model is expected)
  repeated CpuInfo cpu_info = 16;
}

// protolint:disable FIELD_NAMES_LOWER_SNAKE_CASE
message AttestKeyInfo{
  // Endorsement Public Key
  bytes EKPub = 1;
  // Attestation Public Key
  bytes AKPub = 2;
  // Attestation Key Name
  bytes AKName = 3;
}
// protolint:enable FIELD_NAMES_LOWER_SNAKE_CASE

message TpmDescription {
  string vendor = 1;
  string firmware_version = 2;
  string tpm_spec = 3;
}

message NetworkInterface {
  string mac_address = 1;
  PciDeviceProperties pci_properties = 2;
}

message InfinibandInterface {
  PciDeviceProperties pci_properties = 1;

  string guid = 2;
}

message Cpu {
  string vendor = 1;
  string model = 2;
  string frequency = 3;
  uint32 number = 4;
  uint32 core = 5;
  int32 node = 6;
  uint32 socket = 7;
}

message CpuInfo {
  string model = 1;
  string vendor = 2;
  uint32 sockets = 3;
  uint32 cores = 4;
  uint32 threads = 5;
}

message BlockDevice {
  string model = 1;
  string revision = 2;
  string serial = 3;
  string device_type = 4;
}

message NvmeDevice {
  string model = 1;
  string firmware_rev = 2;
  string serial = 3;
}

message DmiData {
  string board_name = 1;
  string board_version = 2;
  string bios_version = 3;
  string product_serial = 4;
  string board_serial = 5;
  string chassis_serial = 6;
  string bios_date = 7;
  string product_name = 8;
  string sys_vendor = 9;
}

message PciDeviceProperties{
  string vendor = 1;
  string device = 2;
  string path = 3;
  sint32 numa_node = 4;
  optional string description = 5;
  optional string slot = 6;
}

message LldpSwitchData {
  string name = 1;
  string id = 2;
  string description = 3;
  string local_port = 4;
  repeated string ip_address = 5;
  string remote_port = 6;
}

message DpuData {
  string part_number = 1;
  string part_description = 2;
  string product_version = 3;
  string factory_mac_address = 4;
  string firmware_version = 5;
  string firmware_date = 6;
  repeated LldpSwitchData switches = 7;
}

message GpuPlatformInfo {
  string chassis_serial = 1;
  uint32 slot_number = 2;
  uint32 tray_index = 3;
  uint32 host_id = 4;
  uint32 module_id = 5;
  string fabric_guid = 6;
}

message Gpu {
  string name = 1;
  string serial = 2;
  string driver_version = 3;
  string vbios_version = 4;
  string inforom_version = 5;
  string total_memory = 6;
  string frequency = 7;
  string pci_bus_id = 8;
  GpuPlatformInfo platform_info = 9;
}

message MemoryDevice {
  optional uint32 size_mb  = 1;
  optional string mem_type = 2;
}

enum CpuArchitecture {
  AARCH64 = 0;
  X86_64 = 1;
  UNKNOWN = 2;
}
